# WettingFront

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  test.yml
doc/source/: analyzer-reference.rst  command-reference.rst  conf.py  config-reference.rst  example.yml  index.rst  intro.rst  plugin.rst  tutorial.rst
doc/source/_templates/autoapi/: index.rst
doc/source/explanation/: documentation.rst  index.rst  install.rst  plugin.rst  testing.rst
src/wettingfront/: __init__.py  models.py
tests/: test_unidirect.py
