[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wettingfront"
description = "Wetting front image analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Jisoo Song", email = "jeesoo9595@snu.ac.kr"}
]
version = "0.0.0"
dynamic = [
    "dependencies",
]

[project.urls]
repository = "https://github.com/JSS95/wettingfront"

[project.scripts]
wettingfront = "wettingfront:main"

[project.optional-dependencies]
img = [
    "numpy",
    "imageio",
    "av",
]
test = [
    "pytest",
]
doc = [
    "furo",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-tabs >= 3.4.5",
    "wettingfront[img]",
]
dev = [
    "flake8",
    "flake8-docstrings",
    "black",
    "isort",
    "docformatter",
    "doc8",
    "mypy",
    "types-PyYAML",
    "wettingfront[test,doc]",
]

[project.entry-points."wettingfront.analyzers"]
Unidirectional = "wettingfront:unidirect_analyzer"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
in-place = true
black = true

[tool.doc8]
ignore = ["D004"]
ignore-path = [
    ".venv",
    "src/*.egg-info",
    "doc/build",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
exclude = ["build"]

[tool.pytest.ini_options]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
addopts = "--ignore-glob=doc/**/*.py --doctest-modules --doctest-glob=*.rst"
